外観デザインの作成

--- a/Dentaku_C/MainWindow.xaml
+++ b/Dentaku_C/MainWindow.xaml
@@ -5,8 +5,47 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dentaku_C"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="MainWindow" Height="400" Width="300">
+    <Grid Background="Cornsilk" Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="1.5*" />
+            <RowDefinition Height="0.25*" />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+
+        <TextBlock Grid.Row="0" Grid.Column="6" Background="LightBlue"  />
+        <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="6" Background="LightBlue" />
+
+        <Button Grid.Row="3" Grid.Column="0" Content="7" Margin="2"/>
+        <Button Grid.Row="3" Grid.Column="1" Content="8" Margin="2"/>
+        <Button Grid.Row="3" Grid.Column="2" Content="9" Margin="2"/>
+        <Button Grid.Row="4" Grid.Column="2" Content="6" Margin="2"/>
+        <Button Grid.Row="4" Grid.Column="1" Content="5" Margin="2"/>
+        <Button Grid.Row="4" Grid.Column="0" Content="4" Margin="2"/>
+        <Button Grid.Row="5" Grid.Column="0" Content="1" Margin="2"/>
+        <Button Grid.Row="5" Grid.Column="1" Content="2" Margin="2"/>
+        <Button Grid.Row="5" Grid.Column="2" Content="3" Margin="2"/>
+        <Button Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Content="0" Margin="2"/>
+        <Button Grid.Row="6" Grid.Column="2" Content="." Margin="2"/>
+
+        <Button Grid.Row="3" Grid.Column="4" Grid.ColumnSpan="2" Content="CA" Margin="2"/>
+        <Button Grid.Row="4" Grid.Column="4" Content="×" Margin="2"/>
+        <Button Grid.Row="4" Grid.Column="5" Content="÷" Margin="2"/>
+        <Button Grid.Row="5" Grid.Column="4" Content="＋" Margin="2"/>
+        <Button Grid.Row="5" Grid.Column="5" Content="ー" Margin="2"/>
+        <Button Grid.Row="6" Grid.Column="4" Grid.ColumnSpan="2" Content="＝" Margin="2"/>
+
     </Grid>
 </Window>
